Binner/Binner.Web/ClientApp/src/custom.css
/* ... */
.ellipsis-container {
  max-width: 100%;
  display: flex;
}

.ellipsis-container div {
  overflow: hidden;
  text-overflow: ellipsis;
}

.ellipsis-container.nowrap div {
  white-space: nowrap;
}

.ellipsis-container.resizable div {
  resize: horizontal;
}

.ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
}

.ellipsis.nowrap {
  white-space: nowrap;
}

.ellipsis.resizable {
  resize: horizontal;
}

.truncate {
  display: -webkit-box;
  max-width: 200px;
  max-height: 40px;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.truncate.small {
  font-size: 0.8em;
}

.ribbon.transparent {
  opacity: 0.35;
}

.clickablerow {
  cursor: pointer;
}

/* set number picker sizes*/
.field.numberpicker.tiny .ui.input {
  width: 150px !important;
}

.field.numberpicker .ui.input,
.field.numberpicker.small .ui.input {
  width: 200px !important;
}

.field.numberpicker .ui.input input {
  width: 40% !important;
}

.field.numberpicker.medium .ui.input {
  width: 250px !important;
}

.field.numberpicker.large .ui.input {
  width: 300px !important;
}

.token {
  font-family: "Source Code Pro", monospace;
  display: inline-block;
  margin-right: 20px;
  font-size: 1.2em;
}

.dropzone {
  transition: outline-color 0.3s ease-in-out;
  outline: 4px dashed transparent;
  outline-offset: 4px;
}

.exportData .dropzone {
    min-height: 200px;
    vertical-align: middle;
}

.exportData .dropzone span {
    margin: auto;
}

.exportData .dropzone ul.errors li {
  list-style-type: square;
}

.exportData .dropzone {
  outline: 4px dashed rgba(0, 0, 0, .05);
}

.exportData .dropzone:hover {
  outline: 4px dashed rgba(0,0,0,.2);
}

.exportData aside {
  margin-top: 10px;
  margin-bottom: 10px;
}

.notdroptarget {
  outline: 4px dashed #125cdc;
  cursor: not-allowed !important;
}

.droptarget {
  outline: 4px dashed #125cdc !important;
}

.droptarget-error {
  outline: 4px dashed #cc0000;
}

.confirm p {
  text-align: center;
  padding: 40px 10px;
  color: var(--theme-color);
  font-weight: normal;
}

.confirm b {
  font-weight: 600;
}

.partLocation {
  text-align: center;
}

.partLocation h1 {
  font-size: 4em;
}

.partLocation.small h1 {
  font-size: 2em !important;
}

.partLocation.small {
  padding: 4px;
  margin-top: 2px !important;
}

/*undo bootstrap modal css*/
.modal {
  height: unset !important;
}

/* gold colored gradient */
.gold-gradient {
  background: radial-gradient(
      ellipse farthest-corner at right bottom,
      #fedb37 0%,
      #fdb931 8%,
      #9f7928 30%,
      #8a6e2f 40%,
      transparent 80%
    ),
    radial-gradient(
      ellipse farthest-corner at left top,
      #ffffff 0%,
      #ffffac 8%,
      #d1b464 25%,
      #5d4a1f 62.5%,
      #5d4a1f 100%
    );
}

/* segment */
.segment .secondary h3 {
  font-size: 1.1rem;
}

.segment .secondary label {
  font-size: 0.9rem !important;
}

.segment .tertiary h3 {
  font-size: 1rem;
}

.segment .tertiary label {
  font-size: 0.8rem !important;
}

/* error modal */
.description h1 {
  font-size: 1.75rem;
  font-weight: 800;
}

.description h2 {
  font-size: 0.9rem;
  font-weight: 500;
  color: #888;
}

.description h3 {
  font-size: 1.3rem;
  font-weight: 500;
  color: #333;
}

.description p {
  color: #bbb;
  font-size: 0.9rem;
  font-weight: 300;
  font-family: "Source Code Pro", monospace;
}

.page-banner {
  min-height: 30px;
}

.page-notice {
  font-size: 0.9em;
  color: var(--theme-page-banner-color);
  background-color: var(--theme-page-banner-bg);
  padding: 2px 10px;
  border: var(--theme-page-banner-border);
  font-weight: 400;
  box-shadow: 0 2px 2px 0 rgb(34 36 38 / 15%);
  cursor: pointer;
  width: 100%;
  max-height: 28px;
}

.page-banner:has(.page-notice.resizable) {
  height: auto;
  min-height: 30px;
}

.page-notice.resizable {
  margin-top: 4px;
  max-height: none;
}

.page-notice div {
  max-width: 100%;
  max-height: 28px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.page-error {
  background-color: var(--theme-page-error-bg);
  color: var(--theme-page-error-color);
  padding: 2px 10px;
  border: 1px dotted #6d0a0a;
  font-weight: 400;
  box-shadow: 0 2px 2px 0 rgb(34 36 38 / 15%);
  cursor: pointer;
  width: 100%;
  max-height: 28px;
  margin-bottom: 1px;
}

.page-error div {
  max-width: 100%;
  max-height: 28px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.popupimage {
  padding: 10px;
  font-size: 0.8em;
  font-style: italic;
}

.popupimage img {
  border: 1px dashed #eee;
  padding: 10px;
  max-width: 500px;
  height: auto;
  display: block;
}

.barcode-support {
  box-shadow: 2px 2px 3px 1px rgb(34 36 38 / 20%);
  border-radius: 12px;
  transition-delay: 0s;
  transition-duration: 0.5s;
  transition-property: filter;
  transition-timing-function: ease-out;
  outline: 4px solid transparent;
  outline-offset: 4px;
  filter: none;
}

.barcode-support.receiving {
  filter: invert(76%) sepia(30%) saturate(3461%) hue-rotate(177deg)
    brightness(98%) contrast(91%);
}

.help-icon {
  font-size: 1.1em;
  color: #aaa;
  text-decoration: none;
}

.help-icon:hover {
  color: rgb(0, 100, 230);
}

.pcb-icon {
  display: inline-block;
  width: 64px;
  height: 46px;
  background-size: 64px 46px;
  background-image: url("/image/icon_pcb.png");
  margin-right: 4px;
}

.pcb-icon.small {
  width: 32px;
  height: 23px;
  background-size: 32px 23px;
}

.pcb-icon.tiny {
  width: 22px;
  height: 16px;
  background-size: 22px 16px;
  background-image: url("/image/icon_pcb_tiny.png");
  vertical-align: middle;
  padding: 0;
  margin-top: 0px;
}

/* Icon hover colors */

svg.MuiSvgIcon-root.parttype {
  color: var(--theme-parttype-icon-color) !important;
}

svg.parttype:hover,
.icon-container svg.parttype:hover {
  color: var(--theme-a-color-hover) !important;
}

svg.parttype-LED:hover,
.icon-container svg.parttype-LED:hover {
  color: #f00 !important;
}
/* ... */

